src/test/resources/invalid/typecheck/Assign_NotInteger.vas
class Main is
    this() is
        var a : Integer = 0
        a = false
    end
end